--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <p class="text-muted">click it to meet the team!</p>
         </div>
     </div>
+    <br/><br/>
   </section>
 
   <!-- ADDITIONAL LOGOS????  -->
@@ -182,7 +183,7 @@
       </div>
       <br/><br/>
       <h4 class="text-center">special thanks to the other USC AGP 2020 directors!</h3>
-        <p class="text-center">couldn't have done it without the support ♡ check these games out!</h5>
+        <p class="text-center">couldn't have done it without the support ♡ check these games out!</p>
     </div>
   </section> 
 
